tests/error/modules_private/helper.vibe
// Private function - not accessible from other modules
fn private_fn() -> i32 {
    return 1
}

pub fn public_fn() -> i32 {
    return private_fn()
}
